# Forecast-weather-site

./: .dockerignore  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  requirements.txt
news_module/: news.py
static/css/: about_us.css  contacts.css  home.css  styles.css
templates/: about_us.html  contacts.html  home.html  index.html
weather_module/: weather.py
